--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="text-left">This site contains forensic anthropology data science projects and source code written in the Julia, C++, and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 license. Integrated
             code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
         <h4>What's new</h4>
-        <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language.</p><div><br><br></div>
+        <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated.</p><div><br><br></div>
         <h4>The Open Source Standard</h4>
         <p>This website and all projects therein are developed to with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and
             tracilibity, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified.</p><div><br><br></div>
