--- a/anthrostats.html
+++ b/anthrostats.html
@@ -35,7 +35,8 @@
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
                         role="menu" style="background-color: #eeeeee;"><a class="dropdown-item" role="presentation" style="color: #273039;font-size: 14px;" href="#"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a></div>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="font-size: 14px;color: #273039;"><strong>Beta Testing</strong></a></div>
                 </li>
                 <li class="nav-item" role="presentation"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
                 </ul>
