--- a/tools.html
+++ b/tools.html
@@ -35,7 +35,8 @@
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
                         role="menu" style="background-color: #eeeeee;"><a class="dropdown-item text-break" role="presentation" style="color: #273039;font-size: 14px;" href="#"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a></div>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a></div>
                 </li>
                 <li class="nav-item" role="presentation"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
                 </ul>
@@ -46,7 +47,7 @@
     <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>Forensic Anthropology Tools</h4>
         <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information please email jjlynch [at] osteocoder [dot] com.</p>
-        <p>Last Updated: 1 June 2019<br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
+        <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
 <thead>
        <tr>
               <th>Tool</th>
@@ -395,7 +396,8 @@
           </tr>
 </tbody>
    </table><div><br><br></div></div>
-    <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
+    <div class="col-md-12 col-xl-10 offset-xl-1"
+        style="padding: 0px;">
         <footer class="border rounded" style="background-color: #273039;">
             <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
         </footer>
