--- a/measurements.html
+++ b/measurements.html
@@ -35,7 +35,8 @@
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
                         role="menu" style="background-color: #eeeeee;"><a class="dropdown-item text-break" role="presentation" style="color: #273039;font-size: 14px;" href="#"><strong>OsteoSort</strong></a>
-                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a></div>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>MSPS</strong></a>
+                        <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="#" style="color: #273039;font-size: 14px;"><strong>Beta Testing</strong></a></div>
                 </li>
                 <li class="nav-item" role="presentation"><a class="nav-link" style="color: #eeeeee;background-color: rgba(255,0,0,0);font-family: 'Open Sans', sans-serif;" href="https://github.com/jjlynch2" target="_blank"><i class="fab fa-github"></i><strong>&nbsp;GitHub</strong></a></li>
                 </ul>
@@ -47,7 +48,7 @@
         <h4>Measurement Standards</h4>
         <p>This project standardizes measurement numbers across multiple measurement procedures. Due to changing standard numbers, this measurement guide was created to avoid downstream issues with CoRA and OsteoSort. These numbers will never change unless
             significant errors are identified. If a measurement becomes deprecated, the number will be indefinitely reserved. These standards provide a stable numbering platform on which advanced analytics can be built.</p>
-        <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a> &nbsp; &nbsp;<a href="Standard_Measurements.pdf" target="_blank">PDF</a> &nbsp; &nbsp;<a href="Standard_Measurements.docx" target="_blank">DOCX</a>            &nbsp; &nbsp;&nbsp;<br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
+        <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
 <thead>
 <tr class="row-1 odd">
 	<th class="column-1">OsteoCodeR 2019</th><th class="column-2">Buikstra &amp; Ubelaker 1994</th><th class="column-3">UTK 1994</th><th class="column-4">UTK 2016</th><th class="column-5">Byrd &amp; Adams 2003</th><th class="column-6">Simmons 1990</th><th class="column-7">Holland 1992</th><th class="column-8">Holland 1995</th><th class="column-9">Howells 1973</th>
@@ -746,17 +747,18 @@
 </tr>
 </tbody>
 </table><div><br><br></div></div>
-    <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
+    <div
+        class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
         <footer class="border rounded" style="background-color: #273039;">
             <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
         </footer>
-    </div>
-    </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
-    <script src="assets/js/z.js"></script>
+        </div>
+        </div>
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+        <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
+        <script src="assets/js/z.js"></script>
 </body>
 
 </html>
