--- a/QA3D.html
+++ b/QA3D.html
@@ -47,7 +47,9 @@
     </div>
     <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>QA3D</h4>
-        <p>xxxx<br><br>Current version: 0.0.1</p><div><br></div>
+        <p>QA3D (Quality Assurance 3D) is an R package that allows the error analysis of repeated scans from three-dimensional equipment. While not requiring the use of skeletal elements, this app was designed and intended to be used with repeated skeletal
+            element scans. Given the rise in popularity of three-dimensional technology in forensic anthropology, there is a need for an FA specific tool to verify the quality of scanners for research and laboratory accreditation purposes.<br><br>Current
+            version: 0.0.1</p><div><br></div>
         <div class="row">
             <div class="col-md-6">
                 <h5>Technical Requirements:</h5><font size="1"><ol>
@@ -69,16 +71,10 @@
             <div class="col-md-6">
                 <h5>Julia Dependencies:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">Distributed</p></li>
-    <li type="square"><p style="margin:2px">Statistics</p></li>
-    <li type="square"><p style="margin:2px">Rmath</p></li>
-   <li type="square"><p style="margin:2px">GLM</p></li>
-    <li type="square"><p style="margin:2px">Optim</p></li>
     <li type="square"><p style="margin:2px">SharedArrays</p></li>
     </font></ol></div>
             <div class="col-md-6">
                 <h5>R Dependencies:</h5><font size="1"><ol>
-    <li type="square"><p style="margin:2px">pixmap</p></li>
-    <li type="square"><p style="margin:2px">jpeg</p></li>
     <li type="square"><p style="margin:2px">Morpho</p></li>
    <li type="square"><p style="margin:2px">DT</p></li>
     <li type="square"><p style="margin:2px">shiny</p></li>
