--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated.</p><div><br><br></div>
             <h4>The Open Source Standard</h4>
             <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and
-                tracilibity, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified.</p><div><br><br></div>
+                traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified.</p><div><br><br></div>
             <h4>Associated Publications</h4>
             <p>Lynch JJ, Byrd JE, LeGarde CB. The Power of Exclusion using Automated Osteometric Sorting: Pair-matching. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13560">https://doi.org/10.1111/1556-4029.13560</a><br>&nbsp;&nbsp;<br>Lynch
                 JJ. An Analysis on the Choice of Alpha Level in the Osteometric Pair-matching of the Os Coxa, Scapula, and Clavicle. <br>Journal of Forensic Sciences <a href="https://doi.org/10.1111/1556-4029.13599">https://doi.org/10.1111/1556-4029.13599</a><br>&nbsp;&nbsp;<br>Lynch
@@ -69,7 +69,7 @@
                 JJ, Stephan CN. Computational Tools in Forensic Anthropology: The Value of Open-Source Licensing as a Standard. <br>Forensic Anthropology <a href="http://dx.doi.org/10.5744/fa.2018.0025">http://dx.doi.org/10.5744/fa.2018.0025</a><br>&nbsp;&nbsp;<br>Warnke-Sommer
                 JD, Lynch JJ, Pawaskar SS, Z-Transform Method for Pairwise Osteometric Pair-matching.<br>Journal of Forensic Sciences&nbsp;<a href="http://dx.doi.org/10.1111/1556-4029.13813">http://dx.doi.org/10.1111/1556-4029.13813</a><br></p><div><br><br></div>
             <h4>Contact</h4>
-            <p>Technical inquiries can be sent to jjlynch [at] osteocoder [dot] com or submitted as issues on the relevent GitHub repositories.</p><div><br><br></div></div>
+            <p>Technical inquiries can be sent to jjlynch [at] osteocoder [dot] com or submitted as issues on the relevant GitHub repositories.</p><div><br><br></div></div>
     <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
         <footer class="border rounded" style="background-color: #273039;">
             <p class="text-center copyright" style="color: #eeeeee;opacity: 1;font-family: 'Open Sans', sans-serif;"><strong>Copyleft 2019 - OsteoCodeR.com</strong></p>
