--- a/osteosort.html
+++ b/osteosort.html
@@ -47,8 +47,8 @@
     </div>
     <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>OsteoSort</h4>
-        <p>OsteoSort is an osteological sorting package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. The majority
-            of the source code is now written in the Julia programming language, which provides crossplatform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br>Current version: 1.3.0</p><div><br></div>
+        <p>OsteoSort is an osteological sorting package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. Most of the
+            source code is now written in the Julia programming language, which provides cross platform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br>Current version: 1.3.0</p><div><br></div>
         <div
             class="row">
             <div class="col-md-6">
