--- a/QA3D.html
+++ b/QA3D.html
@@ -83,6 +83,8 @@
     <li type="square"><p style="margin:2px">rgl</p></li>
     <li type="square"><p style="margin:2px">ClusterR</p></li>
     <li type="square"><p style="margin:2px">JuliaCall</p></li>
+    <li type="square"><p style="margin:2px">rmarkdown</p></li>
+    <li type="square"><p style="margin:2px">knitr</p></li>
     </font></ol><br><br></div>
         </div>
     </div>
