--- a/measurements.html
+++ b/measurements.html
@@ -49,7 +49,7 @@
         <h4>Measurement Standards</h4>
         <p>This project standardizes measurement numbers across multiple measurement procedures. Due to changing standard numbers, this measurement guide was created to avoid downstream issues with CoRA and OsteoSort. These numbers will never change unless
             significant errors are identified. If a measurement becomes deprecated, the number will be indefinitely reserved. These standards provide a stable numbering platform on which advanced analytics can be built.</p>
-        <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
+        <p>Current version: 0.0.1<br>Download: &nbsp;<a href="Standard_Measurements.csv" target="_blank">CSV</a><br></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
 <tr class="row-1 odd">
 	<th class="column-1">OsteoCodeR 2019</th><th class="column-2">Buikstra &amp; Ubelaker 1994</th><th class="column-3">UTK 1994</th><th class="column-4">UTK 2016</th><th class="column-5">Byrd &amp; Adams 2003</th><th class="column-6">Simmons 1990</th><th class="column-7">Holland 1992</th><th class="column-8">Holland 1995</th><th class="column-9">Howells 1973</th>
