--- a/tools.html
+++ b/tools.html
@@ -48,7 +48,7 @@
     <div class="col-auto col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>Forensic Anthropology Tools</h4>
         <p>This table is a compilation of software tools in forensic anthropology and their associated attributes. If you wish to contribute or update any information, please email jjlynch [at] osteocoder [dot] com.</p>
-        <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><div><br><br></div><table id="example" class="table compact table-striped table-hover">
+        <p>Last Updated: 1 June 2019<br>Download:&nbsp;<a href="FA_tools.csv" target="_blank">CSV</a></p><div><br><br></div><table id="example" class="table compact table-striped table-hover" style="width:100%">
 <thead>
        <tr>
               <th>Tool</th>
@@ -68,7 +68,7 @@
           </tr>
        <tr>
               <td>AFA3D</td>
-              <td>R/ C++</td>
+              <td>R/C++</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Craniofacial</td>
@@ -257,7 +257,7 @@
           </tr>
        <tr>
               <td>OsteoSort</td>
-              <td>R, Julia, VB</td>
+              <td>R/Julia/VB</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Commingled</td>
@@ -275,6 +275,13 @@
               <td>Open</td>
               <td>GPLv2</td>
               <td>Craniofacial</td>
+          </tr>
+       <tr>
+              <td>QA3D</td>
+              <td>R/Julia/VB</td>
+              <td>Open</td>
+              <td>GPLv2</td>
+              <td>Data Analysis</td>
           </tr>
        <tr>
               <td>QuickCapture</td>
