--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
                                 <div
                                     class="dropdown-menu border-secondary" role="menu" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
-                                    <div class="dropdown-divider text-warning border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
+                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="anthrostats.html"><strong>AnthroStats</strong></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="tools.html" style="font-size: 14px;color: #273039;"><strong>FA Analytical Tools</strong></a>
-                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a></div>
+                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
+                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>CentroidBanding</strong></a></div>
                 </li>
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
@@ -53,7 +54,7 @@
         <hr
             style="color: #2a7bb6;background-color: #273039;">
             <h4>What is this site?</h4>
-            <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 license.
+            <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 or MIT licenses.
                 Integrated code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
             <h4>What's new</h4>
             <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated.</p><div><br><br></div>
