--- a/CentroidBanding.html
+++ b/CentroidBanding.html
@@ -48,8 +48,8 @@
     </div>
     <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>Centroid Banding</h4>
-        <p>Centroid Banding is an R package that allows the creation of centroid bands from three-dimensional models. Given that this feature has aplicability outside of OsteoSort, this package was created to allow others to test the code for different purposes.
-            Going with this, it is licnesed under MIT to provide more flexibility in its use and adoption.<br><br>Current version: 0.0.1</p><div><br></div>
+        <p>Centroid Banding is an R package that allows the creation of centroid bands from three-dimensional models. Given that this feature has applicability outside of OsteoSort, this package was created to allow others to test the code for different
+            purposes. Going with this, it is licnesed under MIT to provide more flexibility in its use and adoption.<br><br>Current version: 0.0.1</p><div><br></div>
         <div class="row">
             <div class="col-md-6">
                 <h5>Technical Requirements:</h5><font size="1"><ol>
