--- a/osteosort.html
+++ b/osteosort.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>OsteoCodeR.com</title>
+    <title>OsteoCodeR.com (Backup 1561651367849)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
@@ -28,11 +28,11 @@
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #2a7bb6;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
                                 <div
                                     class="dropdown-menu border-secondary" role="menu" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #2a7bb6;" href="osteosort.html"><strong>OsteoSort</strong></a>
-                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
+                                    <div class="dropdown-divider text-warning border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="anthrostats.html"><strong>AnthroStats</strong></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="tools.html" style="color: #273039;font-size: 14px;"><strong>FA Analytical Tools</strong></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
-                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>CentroidBanding</strong></a></div>
+                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a></div>
                 </li>
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
@@ -48,10 +48,10 @@
     </div>
     <div class="col-md-12 col-xl-10 offset-xl-1 rounded" style="background-color: #eeeeee;"><div><br></div>
         <h4>OsteoSort</h4>
-        <p>OsteoSort is an osteological sorting package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. Most of the
-            source code is now written in the Julia programming language, which provides cross platform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br>Current version: 1.3.0</p><div><br></div>
-        <div
-            class="row">
+        <p>Legacy installation instructions for 1.2.6 can be found on GitHub. Version 1.3.0 is expected to be released for beta testing in September 2019. Below are the anticipated requirements for version 1.3.0.<br><br>OsteoSort is an osteological sorting
+            package for R. A variety of quantitative tools are available with an emphasis on model construction. The latest version, 1.3.0, is a significant redevelopment of the backend analytical platform. Most of the source code is now written in the
+            Julia programming language, which provides cross platform parallel support for any method that requires multiple comparisons (e.g. large commingled assemblages).<br><br></p><div><br></div>
+        <div class="row">
             <div class="col-md-6">
                 <h5>Technical Requirements:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">Linux, macOS, or Windows 7/8/10</p></li>
@@ -67,10 +67,10 @@
         library(OsteoSort)<br>
        OsteoSort()
     </span></font></div><br><br></div>
-    </div>
-    <div class="row">
-        <div class="col-md-6">
-            <h5>Julia Dependencies:</h5><font size="1"><ol>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <h5>Julia Dependencies:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">Distributed</p></li>
     <li type="square"><p style="margin:2px">Statistics</p></li>
     <li type="square"><p style="margin:2px">Rmath</p></li>
@@ -78,8 +78,8 @@
     <li type="square"><p style="margin:2px">Optim</p></li>
     <li type="square"><p style="margin:2px">SharedArrays</p></li>
     </font></ol></div>
-        <div class="col-md-6">
-            <h5>R Dependencies:</h5><font size="1"><ol>
+            <div class="col-md-6">
+                <h5>R Dependencies:</h5><font size="1"><ol>
     <li type="square"><p style="margin:2px">pixmap</p></li>
     <li type="square"><p style="margin:2px">jpeg</p></li>
     <li type="square"><p style="margin:2px">Morpho</p></li>
@@ -91,7 +91,7 @@
     <li type="square"><p style="margin:2px">ClusterR</p></li>
     <li type="square"><p style="margin:2px">JuliaCall</p></li>
     </font></ol><br><br></div>
-    </div>
+        </div>
     </div>
     <div class="col-md-12 col-xl-10 offset-xl-1" style="padding: 0px;">
         <footer class="border rounded" style="background-color: #273039;">
