--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>OsteoCodeR.com</title>
+    <title>OsteoCodeR.com (Backup 1561651367849)</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
@@ -28,11 +28,11 @@
                             <li class="dropdown nav-item" style="color: rgb(42,123,182);"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;background-color: rgba(255,255,255,0);" href="#"><i class="fas fa-project-diagram"></i><strong>&nbsp;Projects</strong></a>
                                 <div
                                     class="dropdown-menu border-secondary" role="menu" style="background-color: #eeeeee;color: #2a7bb6;"><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="osteosort.html"><strong>OsteoSort</strong></a>
-                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
+                                    <div class="dropdown-divider text-warning border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="measurements.html"><strong>Measurement Standards</strong><br></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" style="font-size: 14px;color: #273039;" href="anthrostats.html"><strong>AnthroStats</strong></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="tools.html" style="font-size: 14px;color: #273039;"><strong>FA Analytical Tools</strong></a>
                                     <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="QA3D.html" style="color: #273039;font-size: 14px;"><strong>QA3D</strong></a>
-                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>CentroidBanding</strong></a></div>
+                                    <div class="dropdown-divider border-secondary" role="presentation"></div><a class="dropdown-item" role="presentation" href="CentroidBanding.html" style="color: #273039;font-size: 14px;"><strong>Centroid Banding</strong></a></div>
                 </li>
                 <li class="nav-item dropdown"><a class="dropdown-toggle nav-link" data-toggle="dropdown" aria-expanded="false" style="color: #eeeeee;font-family: 'Open Sans', sans-serif;" href="#"><i class="fas fa-chart-bar"></i>&nbsp;<strong>Tools</strong></a>
                     <div class="dropdown-menu border-secondary"
@@ -57,7 +57,8 @@
             <p class="text-left">This site contains forensic anthropology data science projects and source code written primarily in the Julia and R programming languages. All source code is released 'as is' and is licensed as open source under the GPL version 2 or MIT licenses.
                 Integrated code is released under a license relevant to their original license requirements and is stated within the root of the source code files. Particular tools can be used directly from the website through a Shiny UI.&nbsp;</p><div><br><br></div>
             <h4>What's new</h4>
-            <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated.</p><div><br><br></div>
+            <p>OsteoSort version 1.3.0 is currently under development. This includes the complete redevelopment of the analytical code in the Julia programming language. OsteoShiny is now fully integrated with OsteoSort and as a project is deprecated. The
+                legacy version of the OsteoSort live tool (version 1.2.6) is still available under 'Tools' in the navbar. This will be updated with 1.3.0 when the new version is released.</p><div><br><br></div>
             <h4>The Open Source Standard</h4>
             <p>This website and all projects therein are developed with an open source standard to meet ISO 17205 requirements for usability within a legal context. This includes full and open disclosure of all source code to aid with future auditing and
                 traceability, complete version control and archiving of all versions, and full transparency in tracking any bugs or errors that are identified.</p><div><br><br></div>
