--- a/tools.html
+++ b/tools.html
@@ -69,7 +69,7 @@
           </tr>
        <tr>
               <td>AFA3D</td>
-              <td>R/C++</td>
+              <td>R, C++</td>
               <td>Closed</td>
               <td>EULA</td>
               <td>Craniofacial</td>
@@ -104,7 +104,7 @@
           </tr>
        <tr>
               <td>CMP</td>
-              <td>R/Python</td>
+              <td>R, Python</td>
               <td>Closed</td>
               <td></td>
               <td>Comparsion</td>
@@ -258,7 +258,7 @@
           </tr>
        <tr>
               <td>OsteoSort</td>
-              <td>R/Julia/VB</td>
+              <td>R, Julia, VB</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Commingled</td>
@@ -279,7 +279,7 @@
           </tr>
        <tr>
               <td>QA3D</td>
-              <td>R/Julia/VB</td>
+              <td>R, Julia, VB</td>
               <td>Open</td>
               <td>GPLv2</td>
               <td>Data Analysis</td>
